Bug 393629 - Vertical tabs does not remember shown or hidden status
Summary: Vertical tabs does not remember shown or hidden status
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: extensions (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-29 02:02 UTC by Kishore Gopalakrishnan
Modified: 2018-04-29 11:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2018-04-29 02:02:35 UTC
If I have the 'vertical tabs' extension enabled, it does not remember whether I currently have the 'vertical tabs' sidebar shown or hidden. Instead, it is always shown when I open a new window. My use case is that I would like to use it only when I have a lot of tabs open, but hide it when I only have a few tabs. Currently, I have to either use the 'tab manager' sidebar (which is frankly a bit of an overkill if I'm just using it for tab switching) or go into the settings and enable the 'vertical tabs' extension only when I want to use it.
Comment 1 David Rosca 2018-04-29 11:17:27 UTC
Git commit d55d0715071855d1f634de2911c016278b859a5d by David Rosca.
Committed on 29/04/2018 at 08:05.
Pushed by drosca into branch 'Falkon/3.0'.

VerticalTabs: Don't force open sidebar when opening new window

Only automatically open the sidebar after the plugin is enabled
from Preferences.
FIXED-IN: 3.0.1

M  +4    -3    src/plugins/VerticalTabs/verticaltabsplugin.cpp

https://commits.kde.org/falkon/d55d0715071855d1f634de2911c016278b859a5d