VerticalTabs: Don't force open sidebar when opening new window

Only automatically open the sidebar after the plugin is enabled
from Preferences.

BUG: 393629
FIXED-IN: 3.0.1